# infrahub-demo-dc

./: .env.example  .gitignore  .infrahub.yml  .mcp.json  .yamllint.yml  AGENTS.md  README.md  docker-compose.override.yml  pyproject.toml  skills-lock.json  tasks.py
.github/workflows/: ci.yml  sync-docs.yml  update-infrahub-sdk.yml
docs/: AGENTS.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/docs/: developer-guide.mdx  install.mdx  webhook-firewall-demo.mdx
generators/: common.py  generate_dc.py  generate_segment.py
lab/: README.md  demo-webhook.clab.yml
lab/image/: Dockerfile  Makefile  README.md
lab/startup/: fw1.boot
listener/: Dockerfile  README.md  pyproject.toml
listener/ansible/: ansible.cfg  deploy.yml  inventory.yml
listener/ansible/group_vars/: vyos_firewalls.yml
listener/ansible/scripts/: vbash_load_commit.py
listener/src/webhook_listener/: __init__.py  handlers.py  logging_config.py  main.py  playbook_runner.py  signature.py
listener/tests/: conftest.py  test_handlers.py  test_signature.py
listener/tests/fixtures/vyos/: event_artifact_updated.json  expected_config.boot  graphql_device_rules.json
objects/bootstrap/: 00_groups.yml  01_locations.yml  09_virtual_device_templates.yml  10_physical_device_templates.yml  11_device_templates_console.yml  14_design_elements.yml  18_devices.yml  19_docs.yml
objects/cloud_security/: 02_zscaler_devices.yml
objects/git-repo/: github.yml  local-dev.yml
objects/lb/: 02_lb_devices.yml  (+1 more)
scripts/: bootstrap.py  create_conflict.py
tests/: AGENTS.md
transforms/: rack_elevation.py
(+47 files in other folders)
